Fix: Update login link generation to use file-based URLs
- Fix backend API endpoints to generate file:// URLs instead of localhost URLs
- Fix frontend demo simulation to generate file:// URLs
- Ensures merchant login links are accessible from any environment
- Resolves issue where generated links pointed to unreachable localhost URLs

Changes:
- backend/quick-start-phase1a.js: Updated baseUrl default and login link format
- production-demo.html: Updated simulateCreateMerchant to use file-based URLs

--- a/production-demo.html
+++ b/production-demo.html
@@ -451,7 +451,7 @@
             
             // Generate a mock login link
             const token = generateMockToken();
-            const loginLink = `http://localhost:3001/merchant/login?token=${token}`;
+            const loginLink = `file:///Users/calvinsum/storehub-onboarding/merchant-login.html?token=${token}`;
             
             return {
                 ...formData,
