--- a/production-demo.html
+++ b/production-demo.html
@@ -451,7 +451,7 @@
             
             // Generate a mock login link
             const token = generateMockToken();
-            const loginLink = `file:///Users/calvinsum/storehub-onboarding/merchant-login.html?token=${token}`;
+            const loginLink = `https://storehub.com/merchant/login?token=${token}`;
             
             return {
                 ...formData,
